feat(73): refactor of the budget page
